@@ -8,5 +8,5 @@ RUN apk add --no-cache tzdata ffmpeg && \
 WORKDIR /app
 COPY build/libs/*.jar app.jar
 EXPOSE 8080
-ENV JAVA_OPTS="-Xms128m -Xmx256m -XX:MetaspaceSize=64m -XX:MaxMetaspaceSize=192m -XX:+UseG1GC -XX:+UseStringDeduplication"
+ENV JAVA_OPTS="-Xms256m -Xmx256m -XX:MetaspaceSize=96m -XX:MaxMetaspaceSize=192m -XX:+UseG1GC -XX:+UseStringDeduplication -Xlog:gc*:gc.log:time"
 ENTRYPOINT ["sh", "-c", "java $JAVA_OPTS -jar app.jar"]
